--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
 <!-- 底部 -->
 <footer class="footer">
     <div class="copyright"> © 2010- 2018 · All Rights Reserved
-        · <a href="https://www.django.cn">元青的法律笔记</a>
+        · <a href="https://www.fabaoer.cn">元青的法律笔记</a>
         · <a href="http://www.miibeian.gov.cn" target="_blank">豫ICP备19030707号</a>
     </div>
 </footer>
