--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     <link rel='stylesheet' id='demo-css' href='{% static "css/demo.css" %}' type='text/css' media='all'/>
 
 </head>
-<body>
+<body class="scrollHidden">
 {#<div>头部</div>#}
 <!-- 头部 -->
 <header class="fix-wrap" id="fix-wrap">
